<resources>
    <string name="app_name">PetsApp</string>
    <string name="pet_name">Pet\'s Name</string>
    <string name="title_activity_navigation">PetsApp</string>
    <string name="menu">Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="my_pets">My Pets</string>
    <string name="change_password">Change Password</string>
    <string name="account_settings">Account Settings</string>
    <string name="app_settings">App Settings</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="unknown_unknown">Unknown Unknown</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add_a_new_post">Add a new post</string>
    <string name="call_now">Call Now</string>
    <string name="contact_phone">Contact Phone</string>
    <string name="pet_name_2">Pet Name</string>
    <string name="post_description">Post Description</string>
</resources>
