<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="60dp"
        android:paddingRight="60dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/usrusr" />

                <EditText
                    android:id="@+id/fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:background="#00000000"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:letterSpacing="0.1"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor"
                    android:textSize="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4a5a71">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/usrusr" />

                <EditText
                    android:id="@+id/lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:background="#00000000"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:letterSpacing="0.1"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4a5a71"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/message"
                    android:layout_gravity="center"/>
                <EditText
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:layout_marginLeft="15dp"
                    android:background="#00000000"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:inputType="text"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4a5a71">

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/phonemob"
                    android:layout_gravity="center"/>
                <EditText
                    android:id="@+id/phoneNumberTB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor"
                    android:layout_marginLeft="15dp"
                    android:background="#00000000"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:inputType="number"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4a5a71"></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/pswd"
                    android:layout_gravity="center"/>
                <EditText
                    android:id="@+id/pswrdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor"
                    android:layout_marginLeft="15dp"
                    android:background="#00000000"
                    android:inputType="textPassword"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4a5a71"></LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="60dp"
        android:paddingRight="60dp">

        <TextView
            android:id="@+id/sup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="30dp"
            android:background="@color/accent"
            android:gravity="center"
            android:letterSpacing="0.2"
            android:padding="16dp"
            android:text="@string/signup"
            android:textColor="@color/textColor2"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:letterSpacing="0.1"
            android:text="@string/already_have_an_account"
            android:textColor="@color/textColor" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginBottom="400dp">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            />
    </LinearLayout>
</RelativeLayout>
