<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.mohammadghali.petsapp.NewPostFrag">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@color/background"
        android:windowSoftInputMode="adjustPan"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:textColor="@color/textColor"
                android:id="@+id/pet_name_tv"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/add_a_new_post"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                android:id="@+id/contactPhoneTB"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/contact_phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/petBreedSpinner" />

            <EditText
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                android:id="@+id/petNameTB"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/pet_name_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pet_name_tv" />

            <Spinner
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                android:id="@+id/petBreedSpinner"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/petSpinner" />

            <Spinner
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                android:id="@+id/petSpinner"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/petAgeSpinner" />

            <Spinner
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                android:id="@+id/petAgeSpinner"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/petNameTB" />
            <RadioGroup

                android:id="@+id/radioGender"
                android:layout_width="match_parent"
                android:layout_height="80dp">
                <RadioButton
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor"
                    android:id="@+id/genderMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor"
                    android:id="@+id/genderFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>

            <EditText
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                android:id="@+id/postDescTB"
                android:layout_width="match_parent"
                android:layout_height="227dp"
                android:layout_margin="20dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:hint="@string/post_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contactPhoneTB" />

            <ImageButton
                android:id="@+id/takePicBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:srcCompat="@android:drawable/ic_menu_camera" />

            <ImageView
                android:id="@+id/showPicView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:srcCompat="@android:drawable/btn_star" />

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/accent"
                android:text="Post"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cancelBtn"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@android:color/holo_red_light"
                android:text="Cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
